--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "form": "^0.2.4",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "react": "^18",
